# openclbc

./: CMakeLists.txt  README.md
src/: Constants.h  HostCodeGenerator.cpp  HostCodeGenerator.h  HostCodeInvastigator.cpp  HostCodeInvastigator.h  Main.cpp  OpenCLKernelRewriter.cpp  OpenCLKernelRewriter.h  UserConfig.cpp  UserConfig.h
